[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network/Network_setup.gd" type="Script" id=1]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = 7.0
margin_right = 48.5
margin_bottom = 27.0
text = "Create server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -24.0
margin_right = 48.5
margin_bottom = -4.0
text = "Join server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="le_username" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -61.0
margin_right = 76.0
margin_bottom = -37.0
placeholder_text = "Enter username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="l_Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_bottom = -1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Multiplayer_configure/b_Create_server" to="." method="_on_b_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/b_Join_server" to="." method="_on_b_Join_server_pressed"]
